created jumbumbotron and added some styling

--- a/index.html
+++ b/index.html
@@ -1,10 +1,60 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html>
 <head>
   <title>Arnold Lei's Portfolio</title>
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+  <!-- Optional theme 
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">-->
+
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+  
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
+  <div class="container-fluid portfolio-panel ">
+    <div class="banner">
+      <div class="row">
+        <div class="col-md-4">
+        </div>
+        <div class="col-md-4 center">
+        </div>
+        <div class="col-md-4 center" id-"icon-panel">
+          <img class="icon" src="img/github.png" />
+          <img class="icon" src="img/linkedin.png" />
+          <img class="icon" src="img/stackoverflow.png" />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">
 
+        </div>
+        <div class="col-md-4 center">
+          <h1 id="main-title">Arnold Lei</h1>
+          <span id="sub-title"><i>Web Developer, Web Designer</i></span>
+        </div>
+        <div class="col-md-4">
+        </div>
+      </div>
+    </div><!-- end of Banner-->
+  </div> <!-- End of container div-->
+  <div class="container-fluid">
+    <div class="portfolio">
+      <h2>Portfolio Work</h2>  
+      <div class="col-md-6 col-sm-12">
+        <h2>Hangman</h2>  
+        <p>My hangman game</p>
+        <button type="button" class="btn btn-default">Learn More</button>
+      </div>
+    </div><!--end of about me-->
+    <div class="about-me">
+      <div class="col-md-6 col-sm-12">
+        <h2>About Me</h2>  
+        <p>When I meet new people I dread the question "where are you from?". There are no good answers. Do you mean where I was born? Where I was raised? Where I live now? What it says on my passport? All different. I just say New Jersey now because it makes things far more simple. </p>
+      </div>
+    </div><!--end of about me-->
+  </div><!--end of container body-->
 </body>
 </html>
