added portfolio gallery elements

--- a/index.html
+++ b/index.html
@@ -28,29 +28,34 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-2">
 
         </div>
-        <div class="col-md-4 center">
+        <div class="col-md-8 center">
           <h1 id="main-title">Arnold Lei</h1>
-          <span id="sub-title"><i>Web Developer, Web Designer</i></span>
+          <span id="sub-title"><i>Web Developer, Web Designer & World Traveler</i></span>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-2">
         </div>
       </div>
     </div><!-- end of Banner-->
   </div> <!-- End of container div-->
-  <div class="container-fluid">
-    <div class="portfolio">
-      <h2>Portfolio Work</h2>  
-      <div class="col-md-6 col-sm-12">
+  <div class="">
+    <div class="portfolio row">
+      <div class="col-md-6 col-sm-12 panel">
         <h2>Hangman</h2>  
-        <p>My hangman game</p>
-        <button type="button" class="btn btn-default">Learn More</button>
+        <p>A web application I developed for this course.</p>
+        <button type="button" class="button">Learn More</button>
       </div>
-    </div><!--end of about me-->
-    <div class="about-me">
-      <div class="col-md-6 col-sm-12">
+      <div class="col-md-6 col-sm-12 panel-picture">
+        <img style="height: 500px;" src="img/github.png" />
+      </div>
+    </div><!--end of portfolio-->
+    <div class="row about-me">
+      <div class="col-md-6 col-sm-12 panel-picture">
+        <img style="height: 500px;" src="img/github.png" />
+      </div>
+      <div class="col-md-6 col-sm-12 panel">
         <h2>About Me</h2>  
         <p>When I meet new people I dread the question "where are you from?". There are no good answers. Do you mean where I was born? Where I was raised? Where I live now? What it says on my passport? All different. I just say New Jersey now because it makes things far more simple. </p>
       </div>
