--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
     </div><!-- end of Banner-->
   </div> <!-- End of container div-->
   <div class="">
+    <div class="row">
+
+    </div><!--end of about me-->
+
     <div class="portfolio row">
       <div class="col-md-6 col-sm-12 panel">
         <h2>Hangman</h2>  
@@ -51,15 +55,19 @@
         <img style="height: 500px;" src="img/github.png" />
       </div>
     </div><!--end of portfolio-->
-    <div class="row about-me">
+    <div class="portfolio row ">
       <div class="col-md-6 col-sm-12 panel-picture">
         <img style="height: 500px;" src="img/github.png" />
       </div>
       <div class="col-md-6 col-sm-12 panel">
-        <h2>About Me</h2>  
-        <p>When I meet new people I dread the question "where are you from?". There are no good answers. Do you mean where I was born? Where I was raised? Where I live now? What it says on my passport? All different. I just say New Jersey now because it makes things far more simple. </p>
+        <h2>RPG Game</h2>  
+        <p>A web application I developed for this course.</p>
+        <button type="button" class="button">Learn More</button>
       </div>
     </div><!--end of about me-->
+    <div class="footer center">
+      <h3>Footer</h3>
+    </div>
   </div><!--end of container body-->
 </body>
 </html>
