--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-2">
-
+        <div class="col-md-2 ">
         </div>
         <div class="col-md-8 center">
           <h1 id="main-title">Arnold Lei</h1>
@@ -40,9 +39,16 @@
       </div>
     </div><!-- end of Banner-->
   </div> <!-- End of container div-->
+
+
   <div class="">
     <div class="row">
-
+      <div class="col-md-6 profile-pic">
+      </div>
+      <div class="col-md-">
+        <h1>About Me </h1>
+        <p>Hi! My name is Arnold Lei. I am a web developer and web designer.</p>
+      </div>
     </div><!--end of about me-->
 
     <div class="portfolio row">
