Updated the styling sheet

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 
   <div class="">
     <div class="row">
-      <div class="col-md-6 profile-pic">
+      <div class="col-md-4 profile-pic">
       </div>
-      <div class="col-md-">
+      <div class="col-md-8 panel">
         <h1>About Me </h1>
         <p>Hi! My name is Arnold Lei. I am a web developer and web designer.</p>
       </div>
@@ -53,7 +53,7 @@
 
     <div class="portfolio row">
       <div class="col-md-6 col-sm-12 panel">
-        <h2>Hangman</h2>  
+        <h1>Hangman</h1>  
         <p>A web application I developed for this course.</p>
         <button type="button" class="button">Learn More</button>
       </div>
@@ -66,7 +66,7 @@
         <img style="height: 500px;" src="img/github.png" />
       </div>
       <div class="col-md-6 col-sm-12 panel">
-        <h2>RPG Game</h2>  
+        <h1>RPG Game</h1>  
         <p>A web application I developed for this course.</p>
         <button type="button" class="button">Learn More</button>
       </div>
