Gallery elements complete

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
     <div class="row">
       <div class="col-md-4 profile-pic">
       </div>
-      <div class="col-md-8 panel">
+      <div class="col-md-8 about-me">
         <h1>About Me </h1>
-        <p>Hi! My name is Arnold Lei. I am a web developer and web designer.</p>
+        <p>Hi! My name is Arnold Lei. I am a cat lover, web developer, web designer, world travler, and much more. I am always looking to learn new things and improving myself. Thank you for taking the time to look at my portfolio, I'm sure you'll be impressed with what you see. </p>
       </div>
     </div><!--end of about me-->
 
@@ -60,7 +60,7 @@
       <div class="col-md-6 col-sm-12 panel-picture">
         <img style="height: 500px;" src="img/github.png" />
       </div>
-    </div><!--end of portfolio-->
+    </div>
     <div class="portfolio row ">
       <div class="col-md-6 col-sm-12 panel-picture">
         <img style="height: 500px;" src="img/github.png" />
@@ -70,7 +70,47 @@
         <p>A web application I developed for this course.</p>
         <button type="button" class="button">Learn More</button>
       </div>
-    </div><!--end of about me-->
+    </div>
+    <div class="portfolio row">
+      <div class="col-md-6 col-sm-12 panel">
+        <h1>Trivia Game</h1>  
+        <p>A web application I developed for this course.</p>
+        <button type="button" class="button">Learn More</button>
+      </div>
+      <div class="col-md-6 col-sm-12 panel-picture">
+        <img style="height: 500px;" src="img/github.png" />
+      </div>
+    </div>
+    <div class="portfolio row ">
+      <div class="col-md-6 col-sm-12 panel-picture">
+        <img style="height: 500px;" src="img/github.png" />
+      </div>
+      <div class="col-md-6 col-sm-12 panel">
+        <h1>Rutgers Info Widget</h1>  
+        <p>A web application I developed for this course.</p>
+        <button type="button" class="button">Learn More</button>
+      </div>
+    </div>
+    <div class="portfolio row">
+      <div class="col-md-6 col-sm-12 panel">
+        <h1>Rock Paper Scissors</h1>  
+        <p>A web application I developed for this course.</p>
+        <button type="button" class="button">Learn More</button>
+      </div>
+      <div class="col-md-6 col-sm-12 panel-picture">
+        <img style="height: 500px;" src="img/github.png" />
+      </div>
+    </div>
+    <div class="portfolio row ">
+      <div class="col-md-6 col-sm-12 panel-picture">
+        <img style="height: 500px;" src="img/github.png" />
+      </div>
+      <div class="col-md-6 col-sm-12 panel">
+        <h1>Black Jack</h1>  
+        <p>A web application I developed for this course.</p>
+        <button type="button" class="button">Learn More</button>
+      </div>
+    </div>
     <div class="footer center">
       <h3>Footer</h3>
     </div>
