Added contact form and footer

--- a/index.html
+++ b/index.html
@@ -5,26 +5,27 @@
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
-  <!-- Optional theme 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">-->
-
   <!-- Latest compiled and minified JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
   
   <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
-  <div class="container-fluid portfolio-panel ">
+  <div class="container-fluid portfolio-panel "><!-- Beginning of Banner-->
     <div class="banner">
       <div class="row">
         <div class="col-md-4">
         </div>
-        <div class="col-md-4 center">
+        <div class="col-md-4">
         </div>
         <div class="col-md-4 center" id-"icon-panel">
-          <img class="icon" src="img/github.png" />
-          <img class="icon" src="img/linkedin.png" />
-          <img class="icon" src="img/stackoverflow.png" />
+          <a href="https://github.com/arnold-lei" target="_blank">
+            <img class="icon" src="img/github.png" />
+          </a>
+          <img class="icon" src="img/linkedin.png" /> </a>
+          <a href="https://stackoverflow.com/users/6273396/arnold-lei" target="_blank">
+            <img class="icon" src="img/stackoverflow.png" />
+          </a>
         </div>
       </div>
       <div class="row">
@@ -41,7 +42,7 @@
   </div> <!-- End of container div-->
 
 
-  <div class="">
+  <div class="container-fluid"><!-- Beginning of about me-->
     <div class="row">
       <div class="col-md-4 profile-pic">
       </div>
@@ -51,68 +52,111 @@
       </div>
     </div><!--end of about me-->
 
-    <div class="portfolio row">
-      <div class="col-md-6 col-sm-12 panel">
-        <h1>Hangman</h1>  
-        <p>A web application I developed for this course.</p>
-        <button type="button" class="button">Learn More</button>
+
+    <div class="gallery"><!-- Beginning of Gallery-->
+      <div class="portfolio row">
+        <div class="col-md-6 col-sm-12 panel">
+          <h1>Hangman</h1>  
+          <p>A web application I developed for this course.</p>
+          <button type="button" class="button">Learn More</button>
+        </div>
+        <div class="col-md-6 col-sm-12 panel-picture">
+          <img style="height: 500px;" src="img/github.png" />
+        </div>
       </div>
-      <div class="col-md-6 col-sm-12 panel-picture">
-        <img style="height: 500px;" src="img/github.png" />
+      <div class="portfolio row ">
+        <div class="col-md-6 col-sm-12 panel-picture">
+          <img style="height: 500px;" src="img/github.png" />
+        </div>
+        <div class="col-md-6 col-sm-12 panel">
+          <h1>RPG Game</h1>  
+          <p>A web application I developed for this course.</p>
+          <button type="button" class="button">Learn More</button>
+        </div>
       </div>
-    </div>
-    <div class="portfolio row ">
-      <div class="col-md-6 col-sm-12 panel-picture">
-        <img style="height: 500px;" src="img/github.png" />
+      <div class="portfolio row">
+        <div class="col-md-6 col-sm-12 panel">
+          <h1>Trivia Game</h1>  
+          <p>A web application I developed for this course.</p>
+          <button type="button" class="button">Learn More</button>
+        </div>
+        <div class="col-md-6 col-sm-12 panel-picture">
+          <img style="height: 500px;" src="img/github.png" />
+        </div>
       </div>
-      <div class="col-md-6 col-sm-12 panel">
-        <h1>RPG Game</h1>  
-        <p>A web application I developed for this course.</p>
-        <button type="button" class="button">Learn More</button>
+      <div class="portfolio row ">
+        <div class="col-md-6 col-sm-12 panel-picture">
+          <img style="height: 500px;" src="img/github.png" />
+        </div>
+        <div class="col-md-6 col-sm-12 panel">
+          <h1>Rutgers Info Widget</h1>  
+          <p>A web application I developed for this course.</p>
+          <button type="button" class="button">Learn More</button>
+        </div>
       </div>
-    </div>
-    <div class="portfolio row">
-      <div class="col-md-6 col-sm-12 panel">
-        <h1>Trivia Game</h1>  
-        <p>A web application I developed for this course.</p>
-        <button type="button" class="button">Learn More</button>
+      <div class="portfolio row">
+        <div class="col-md-6 col-sm-12 panel">
+          <h1>Rock Paper Scissors</h1>  
+          <p>A web application I developed for this course.</p>
+          <button type="button" class="button">Learn More</button>
+        </div>
+        <div class="col-md-6 col-sm-12 panel-picture">
+          <img style="height: 500px;" src="img/github.png" />
+        </div>
       </div>
-      <div class="col-md-6 col-sm-12 panel-picture">
-        <img style="height: 500px;" src="img/github.png" />
+      <div class="portfolio row ">
+        <div class="col-md-6 col-sm-12 panel-picture">
+          <img style="height: 500px;" src="img/github.png" />
+        </div>
+        <div class="col-md-6 col-sm-12 panel">
+          <h1>Black Jack</h1>  
+          <p>A web application I developed for this course.</p>
+          <button type="button" class="button">Learn More</button>
+        </div>
       </div>
-    </div>
-    <div class="portfolio row ">
-      <div class="col-md-6 col-sm-12 panel-picture">
-        <img style="height: 500px;" src="img/github.png" />
+    </div><!-- End of Gallery-->
+  </div><!--end of container body-->
+
+    <div class="contact-me"><!-- Start of Contact Me-->
+      <div class="row">
+        <div class="col-md-3">
+        </div>
+        <div class="col-md-6 ">
+          <h1>Contact Me</h1>
+          <form class="form">
+            <div class="form-group">
+              <label for="email">Name</label>
+              <input type="userName" class="form-control"  placeholder="e.g. John Smith">
+            </div>
+            <div class="form-group">
+              <label for="email">Email address</label>
+              <input type="email" class="form-control"  placeholder="example@gmail.com">
+            </div>
+            <div class="form-group">
+              <label for="message">Message</label>
+              <textarea class="form-control" rows="10"></textarea>
+            </div>
+            <button type="submit" class="button">Submit</button>
+          </form>
+        </div>
+        <div class="col-md-3">
+        </div>
       </div>
-      <div class="col-md-6 col-sm-12 panel">
-        <h1>Rutgers Info Widget</h1>  
-        <p>A web application I developed for this course.</p>
-        <button type="button" class="button">Learn More</button>
-      </div>
-    </div>
-    <div class="portfolio row">
-      <div class="col-md-6 col-sm-12 panel">
-        <h1>Rock Paper Scissors</h1>  
-        <p>A web application I developed for this course.</p>
-        <button type="button" class="button">Learn More</button>
-      </div>
-      <div class="col-md-6 col-sm-12 panel-picture">
-        <img style="height: 500px;" src="img/github.png" />
-      </div>
-    </div>
-    <div class="portfolio row ">
-      <div class="col-md-6 col-sm-12 panel-picture">
-        <img style="height: 500px;" src="img/github.png" />
-      </div>
-      <div class="col-md-6 col-sm-12 panel">
-        <h1>Black Jack</h1>  
-        <p>A web application I developed for this course.</p>
-        <button type="button" class="button">Learn More</button>
-      </div>
-    </div>
+    </div><!-- End of Contact Me-->
+
     <div class="footer center">
-      <h3>Footer</h3>
+      <div class="row">
+        <div class="col-md-4">
+          <h2 id="footer">&copy; Copyright 2016 Arnold Lei</h2>
+        </div>
+        <div class="col-md-4">
+          <h2 id="footer">Rutgers Coding BootCamp</h2>
+        </div>
+        <div class="col-md-4 center" id-"icon-panel">
+          <img class="icon" src="img/github.png" />
+          <img class="icon" src="img/linkedin.png" />
+          <img class="icon" src="img/stackoverflow.png" />
+        </div>
     </div>
   </div><!--end of container body-->
 </body>
