Added picturesto the gallery portion

--- a/index.html
+++ b/index.html
@@ -56,41 +56,41 @@
     <div class="gallery"><!-- Beginning of Gallery-->
       <div class="portfolio row">
         <div class="col-md-6 col-sm-12 panel">
-          <h1>Hangman</h1>  
-          <p>A web application I developed for this course.</p>
+          <h1>Fluff and I</h1>  
+          <p>Fluff and I straight chillin'.</p>
           <button type="button" class="button">Learn More</button>
         </div>
         <div class="col-md-6 col-sm-12 panel-picture">
-          <img style="height: 500px;" src="img/github.png" />
+          <img class="panel-icon" src="img/arnold-fluff-square.jpg" />
         </div>
       </div>
       <div class="portfolio row ">
         <div class="col-md-6 col-sm-12 panel-picture">
-          <img style="height: 500px;" src="img/github.png" />
+          <img class="panel-icon" src="img/jenny-petting-tokyo.jpg" />
         </div>
         <div class="col-md-6 col-sm-12 panel">
-          <h1>RPG Game</h1>  
-          <p>A web application I developed for this course.</p>
+          <h1>Jenny Petting Tokyo</h1>  
+          <p>Tokyo purring up a storm getting dem pets.</p>
           <button type="button" class="button">Learn More</button>
         </div>
       </div>
       <div class="portfolio row">
         <div class="col-md-6 col-sm-12 panel">
-          <h1>Trivia Game</h1>  
-          <p>A web application I developed for this course.</p>
+          <h1>Climbing the Swiss Alps</h1>  
+          <p>A dream come true for me.</p>
           <button type="button" class="button">Learn More</button>
         </div>
         <div class="col-md-6 col-sm-12 panel-picture">
-          <img style="height: 500px;" src="img/github.png" />
+          <img class="panel-icon" src="img/swiss-alps.jpg" />
         </div>
       </div>
       <div class="portfolio row ">
         <div class="col-md-6 col-sm-12 panel-picture">
-          <img style="height: 500px;" src="img/github.png" />
+          <img class="panel-icon" src="img/white-water-rafting.jpg" />
         </div>
         <div class="col-md-6 col-sm-12 panel">
-          <h1>Rutgers Info Widget</h1>  
-          <p>A web application I developed for this course.</p>
+          <h1>White Water Rafting in Costa Rica</h1>  
+          <p>Jenny and I had a blast in Costa Rica, here is us white water rafting.</p>
           <button type="button" class="button">Learn More</button>
         </div>
       </div>
@@ -101,12 +101,12 @@
           <button type="button" class="button">Learn More</button>
         </div>
         <div class="col-md-6 col-sm-12 panel-picture">
-          <img style="height: 500px;" src="img/github.png" />
+          <img class="panel-icon" src="img/github.png" />
         </div>
       </div>
       <div class="portfolio row ">
         <div class="col-md-6 col-sm-12 panel-picture">
-          <img style="height: 500px;" src="img/github.png" />
+          <img class="panel-icon" src="img/github.png" />
         </div>
         <div class="col-md-6 col-sm-12 panel">
           <h1>Black Jack</h1>  
