--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </div>
       <div class="portfolio row ">
         <div class="col-md-6 col-sm-12 panel-picture">
-          <img class="panel-icon" src="img/jenny-petting-tokyo.jpg" />
+          <img class="panel-icon float-right" src="img/jenny-petting-tokyo.jpg" />
         </div>
         <div class="col-md-6 col-sm-12 panel">
           <h1>Jenny Petting Tokyo</h1>  
@@ -86,7 +86,7 @@
       </div>
       <div class="portfolio row ">
         <div class="col-md-6 col-sm-12 panel-picture">
-          <img class="panel-icon" src="img/white-water-rafting.jpg" />
+          <img class="panel-icon float-right" src="img/white-water-rafting.jpg  " />
         </div>
         <div class="col-md-6 col-sm-12 panel">
           <h1>White Water Rafting in Costa Rica</h1>  
@@ -94,7 +94,7 @@
           <button type="button" class="button">Learn More</button>
         </div>
       </div>
-      <div class="portfolio row">
+<!--       <div class="portfolio row">
         <div class="col-md-6 col-sm-12 panel">
           <h1>Rock Paper Scissors</h1>  
           <p>A web application I developed for this course.</p>
@@ -106,14 +106,14 @@
       </div>
       <div class="portfolio row ">
         <div class="col-md-6 col-sm-12 panel-picture">
-          <img class="panel-icon" src="img/github.png" />
+          <img class="panel-icon float-right" src="img/github.png" />
         </div>
         <div class="col-md-6 col-sm-12 panel">
           <h1>Black Jack</h1>  
           <p>A web application I developed for this course.</p>
           <button type="button" class="button">Learn More</button>
         </div>
-      </div>
+      </div> -->
     </div><!-- End of Gallery-->
   </div><!--end of container body-->
 
